--- a/IG-Publisher/hcx-ig-template-local/includes/fragment-header.html
+++ b/IG-Publisher/hcx-ig-template-local/includes/fragment-header.html
@@ -1,6 +1,6 @@
 <!-- Placeholder for child template header declarations -->
 <div id="family-nav">
-  <a id="family-logo" no-external="true"><img height="50" alt="Swasth Alliance"
+  <a id="family-logo" no-external="true"><img height="50" alt="HCX Protocol"
       src="assets/images/HCX_logo-final-2.png" />
   </a>
 </div>
