--- a/IG-Publisher/hcx-ig-template-local/content/assets/css/project.css
+++ b/IG-Publisher/hcx-ig-template-local/content/assets/css/project.css
@@ -46,13 +46,13 @@ var(--publish-box-border); */
 :root {
 
   --ig-status-text-color: maroon; /* 1. IG Title and status text color */
-  --navbar-bg-color: #8e8c90; /* 2. Header container color */
+  --navbar-bg-color: #7b1fad; /* 2. Header container color */
   --footer-bg-color: #707070; /* 3. Footer background color*/
-  --footer-container-bg-color: #8e8c90; /* 4. Footer container color */
+  --footer-container-bg-color: #7b1fad; /* 4. Footer container color */
   --stripe-bg-color: #999999; /* 5. Header strip color */
 
-  --btn-hover-color: #000000;  /* 6. Menu button hover color */
-  --btn-active-color: #030001; /* 7. Menu button active color */
+  --btn-hover-color: #9b2fdd;  /* 6. Menu button hover color */
+  --btn-active-color: #da0c23; /* 7. Menu button active color */
   --btn-text-color: #e6e6e6; /* 8. Menu button text color */
   --btn-gradient-start-color: #428bca; /* 9. Menu item gradient start color */
   --btn-gradient-end-color: #357ebd; /* 10. Menu item gradient end  color */
@@ -70,7 +70,7 @@ var(--publish-box-border); */
   --stu-note-background-color: #fff2ff; /* 19. (STU) Note box background color */
   --stu-note-border-left-color: #ffa0ff; /* 20. (STU) Note box border color */
 
-  --ig-header-color: #d8cbcb; /* 21. Header color (sides) */
+  --ig-header-color: #f5f5f5; /* 21. Header color (sides) */
   --ig-header-container-color: #ffffff; /* 22. Header container color (center) */
   --footer-nav-bg-color: #f5f5f5; /* 23. Footer navigation background color*/
 
@@ -100,6 +100,7 @@ body {
   position: relative;
 }
 .segment > .container {
+  background-color: #ffffff;
   position: relative;
 }
 #segment-header {
@@ -193,7 +194,7 @@ body {
 
 #family-nav {
     line-height: 50px;
-    float: left;
+    float: right;
     margin-top: 4px;
     margin-bottom: 8px;
     color: #808080;
