--- a/IG-Publisher/hcx-ig-template-local/includes/fragment-css.html
+++ b/IG-Publisher/hcx-ig-template-local/includes/fragment-css.html
@@ -1,1 +1,2 @@
 <!-- Placeholder for child template CSS declarations -->
+    <link href="{{site.data.info.assets}}assets/css/hl7.css" rel="stylesheet"/>
