update to ig template

--- a/IG-Publisher/hcx-ig-template-local/includes/fragment-header.html
+++ b/IG-Publisher/hcx-ig-template-local/includes/fragment-header.html
@@ -1,7 +1,6 @@
 <!-- Placeholder for child template header declarations -->
-
-        <div id="hl7-nav">
-          <a id="hl7-logo" no-external="true" href="http://hcxprotocol.io/">
-            <img height="50" alt="HCX Protocol" src="{{site.data.info.assets}}assets/images/HCX_logo-final-2.png"/>
-          </a>
-        </div>
+<div id="family-nav">
+  <a id="family-logo" no-external="true"><img height="50" alt="HCX Protocol"
+      src="assets/images/HCX_logo-final-2.png" />
+  </a>
+</div>
